[package]
name = "conwaysgol2d-wasm"
version = "0.3.0"
edition = "2021"
authors = ["Priyav Kaneria <priyavkaneria@gmail.com>"]

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"